# home-budget-finance

./: .gitignore  main.py  pyproject.toml
src/: agent.py
src/database/: execute.py
src/etl/: extract.py  load.py  trasform.py
src/llm/: agent.py  analyze-agent.py  prompts.py  sequential_chain.py
src/utils/: constants.py
statements/: CIBC-2025.csv  NBC-2025.csv  Scotia-2025.csv  rbc-checking.csv
statements/dec/: NBC-dec.csv  Scotia-dec.csv  Walmart-dec.csv  cibc-dec.csv  rbc-dec.csv
